v0.1.0014
- made level next key be space
- fixed spawn on pacman lvl
- swapped pacman and saferun levels
- added warnings on lvls 7, 8, 9
- reworked levels 7, 8, 9
- fixed level bugs
- make boss death trigger door spawn

v0.1.todo
- add restart level option
- add puzzle levels

v0.1.0008
- made grid optional
- put text under character
- removed debug stuff
- prettified tutorial screen
- add more info to tutorial

v0.1.0003
- brightened bombs
- added grid
- fixed stacking of items