@@ -1,0 +1,40 @@
+#define PLUS_ENTITY_TEX 0
+#define COIN_ENTITY_TEX 1
+#define BOMB_ENTITY_TEX 2
+#define WALL_ENTITY_TEX 3
+#define DOOR_ENTITY_TEX 4
+#define TIME_ENTITY_TEX 5
+
+#define ENEMY_TEX 6
+#define VLASER_TEX 7
+#define HLASER_TEX 8
+#define BOSS_TEX 9
+
+#define EXPLOSION_TEX 10
+#define VLASER_BEAM_TEX 11
+#define HLASER_BEAM_TEX 12
+
+#define CHAR_TEX 13
+
+#define FLOOR_TEX 14
+
+#include "main.h"
+
+bool init_display(void){
+    return true;
+}
+
+bool jumpwr_xyt(int x, int y, int t){
+    return true;
+}
+
+bool clear_display(void){
+    renderTexture.clear();
+    return true;
+}
+
+char get_dkey(void){
+
+    return 0;
+}
+
