@@ -1,0 +1,4 @@
+bool init_display(void);
+bool jumpwr_xyt(int x, int y, int t);
+bool clear_display(void);
+char get_dkey(void);
